fixing zoom in on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -72,7 +72,7 @@ input[type="color"] {
 
 
 @media (max-width : 600px){
-  body{
-    max-width: 100vw;
+  select{
+    font-size: 18px;
   }
 }
